--- a/HOME PAGE.html
+++ b/HOME PAGE.html
@@ -11,7 +11,7 @@
     <header>
         <img src="logo1.png" alt="Otanet" width="65" heigh="50">
       <div class="nav-icons">
-            <div><a href="HOME PAGE.html">Home</a></div>
+            <div><a href="index.html">Home</a></div>
             <div><a href="ABOUT.html">About Us</a></div>
             <div><a href="blog.html">Blog</a></div>
             <div><a href="midterm.html">Sign Up</a></div>
