Update OTANET HOME FEED.html

--- a/OTANET HOME FEED.html
+++ b/OTANET HOME FEED.html
@@ -13,9 +13,8 @@
     <nav>
       <ul>
         <li>Home</li>
-        <li>Marketplace</li>
-        <li>Groups</li>
-        <li>Notifications</li>
+        <li>Log out</li>
+        
       </ul>
     </nav>
   </header>
