--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <div><a href="sign up.html">Log In</a></div>
           </div>
           <div class="icons">
-              <span>🔍</span>
-              <span>👤</span>
+              <span>-</span>
+              <span>-</span>
           </div>
       </header>
   
