--- a/midterm.html
+++ b/midterm.html
@@ -20,8 +20,8 @@
         <div><a href="sign up.html">Log In</a></div>
       </div>
       <div class="icons">
-        <span>🔍</span>
-        <span>👤</span>
+        <span>-</span>
+        <span>-</span>
     </div>
       </header>
 
