--- a/download.html
+++ b/download.html
@@ -19,8 +19,8 @@
         <div><a href="sign up.html">Log In</a></div>
       </div>
       <div class="icons">
-        <span>🔍</span>
-        <span>👤</span>
+        <span>-</span>
+        <span>-</span>
     </div>
       </header>
 
