--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               </div>
           </div>
           <div class="image-section">
-     <img src="Phone1.png" width="433px" height="474px">
+     <img src="MOCK UP.png" width="659px" height="674px">
           </div>
       </div>
       <footer>
