OTANET HOME FEED.html

--- a/OTANET HOME FEED.html
+++ b/OTANET HOME FEED.html
@@ -28,10 +28,11 @@
     </div>
   </section>
 
-  <section class="stories">
+  <section class="container">
+    <div class="story-section">
     <div class="story">Create Story for Otanet</div>
     <div class="story">ANIME THEME</div>
-    
+    </div>
   </section>
 
   <section class="feed">
